--- a/src/view/addplayer_screen.fxml
+++ b/src/view/addplayer_screen.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddScreenController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddPlayerController">
    <children>
       <Label fx:id="lblHeaderCadastro" layoutX="215.0" layoutY="21.0" text="CADASTRO DE ATLETA">
          <font>
