--- a/src/view/addplayer_screen.fxml
+++ b/src/view/addplayer_screen.fxml
@@ -4,25 +4,22 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddPlayerController">
+<AnchorPane prefHeight="720.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddPlayerController">
    <children>
-      <Label fx:id="lblHeaderCadastro" layoutX="215.0" layoutY="21.0" text="CADASTRO DE ATLETA">
+      <Label fx:id="lblHeaderCadastro" layoutX="386.0" layoutY="37.0" text="GESTÃO DE ATLETA">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
       </Label>
-      <Button fx:id="btnSalvar" layoutX="300.0" layoutY="420.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="100.0" style="-fx-background-color: #228B22;" text="Salvar" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="16.0" />
-         </font>
-      </Button>
-      <VBox layoutX="132.0" layoutY="85.0" prefHeight="354.0" prefWidth="436.0">
+      <VBox layoutX="44.0" layoutY="88.0" prefHeight="252.0" prefWidth="957.0">
          <children>
             <Label fx:id="lblDadosPessoais" text="Dados pessoais">
                <font>
@@ -35,6 +32,11 @@
             <HBox prefHeight="25.0" prefWidth="500.0">
                <children>
                   <TextField fx:id="tfNomeCompleto" prefHeight="25.0" prefWidth="315.0" promptText="Nome completo">
+                     <HBox.margin>
+                        <Insets right="20.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <TextField fx:id="tfNomeMae" prefHeight="25.0" prefWidth="315.0" promptText="Nome da mãe">
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin>
@@ -60,24 +62,12 @@
                   <Insets top="20.0" />
                </padding>
             </HBox>
-            <HBox prefHeight="25.0" prefWidth="500.0">
-               <children>
-                  <TextField fx:id="tfNomeMae" prefHeight="25.0" prefWidth="315.0" promptText="Nome da mãe">
-                     <HBox.margin>
-                        <Insets bottom="40.0" />
-                     </HBox.margin>
-                  </TextField>
-               </children>
-               <padding>
-                  <Insets top="20.0" />
-               </padding>
-            </HBox>
             <Label fx:id="lblDadosAtletas" text="Dados de atleta">
                <font>
                   <Font size="18.0" />
                </font>
                <VBox.margin>
-                  <Insets bottom="30.0" />
+                  <Insets bottom="15.0" top="20.0" />
                </VBox.margin>
             </Label>
             <HBox prefHeight="25.0" prefWidth="500.0">
@@ -94,8 +84,46 @@
                   </ComboBox>
                   <TextField fx:id="tfAltura" prefHeight="25.0" prefWidth="109.0" promptText="Altura (cm)" />
                </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets right="20.0" />
+               </padding>
             </HBox>
          </children>
+         <padding>
+            <Insets left="40.0" />
+         </padding>
       </VBox>
+      <TableView layoutX="81.0" layoutY="340.0" prefHeight="285.0" prefWidth="849.0">
+        <columns>
+          <TableColumn prefWidth="51.0" resizable="false" text="ID" />
+          <TableColumn prefWidth="385.3333435058594" resizable="false" text="NOME" />
+            <TableColumn minWidth="0.0" prefWidth="84.66665649414062" resizable="false" text="IDADE" />
+            <TableColumn prefWidth="97.00003051757812" resizable="false" text="POSIÇÃO" />
+            <TableColumn minWidth="0.0" prefWidth="95.3333740234375" resizable="false" text="ALTURA" />
+            <TableColumn minWidth="0.0" prefWidth="136.0" resizable="false" text="PERNA DE CHUTE" />
+        </columns>
+      </TableView>
+      <HBox alignment="CENTER" layoutX="89.0" layoutY="649.0" prefHeight="37.0" prefWidth="850.0" spacing="50.0">
+         <children>
+            <Button fx:id="btnSalvar1" mnemonicParsing="false" prefHeight="36.0" prefWidth="100.0" style="-fx-background-color: #ff0000;" text="Excluir" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnSalvar2" mnemonicParsing="false" prefHeight="36.0" prefWidth="100.0" style="-fx-background-color: #ffa000;" text="Editar" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnSalvar" mnemonicParsing="false" prefHeight="36.0" prefWidth="100.0" style="-fx-background-color: #228B22;" text="Salvar" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
