--- a/src/view/addpartida_screen.fxml
+++ b/src/view/addpartida_screen.fxml
@@ -92,7 +92,7 @@
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button fx:id="btnSalvar12" mnemonicParsing="false" prefHeight="36.0" prefWidth="100.0" style="-fx-background-color: #228B22;" text="Salvar" textFill="WHITE">
+            <Button fx:id="btnSalvar12" mnemonicParsing="false" onAction="#btnLoad" prefHeight="36.0" prefWidth="100.0" style="-fx-background-color: #228B22;" text="Salvar" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
