--- a/src/view/addpartida_screen.fxml
+++ b/src/view/addpartida_screen.fxml
@@ -80,8 +80,8 @@
       <ComboBox fx:id="cbAutorGol" layoutX="789.0" layoutY="85.0" prefHeight="35.0" prefWidth="316.0" promptText="Autor do Gol" />
       <TableView fx:id="tableGols" layoutX="790.0" layoutY="275.0" prefHeight="346.0" prefWidth="332.0">
         <columns>
-          <TableColumn prefWidth="75.0" resizable="false" text="ID" />
-          <TableColumn prefWidth="256.0" resizable="false" text="AUTO DO GOL" />
+          <TableColumn fx:id="colidgol" prefWidth="75.0" resizable="false" text="ID" />
+          <TableColumn fx:id="colautor" prefWidth="256.0" resizable="false" text="AUTO DO GOL" />
         </columns>
       </TableView>
       <HBox alignment="CENTER" layoutX="88.0" layoutY="656.0" prefHeight="48.0" prefWidth="562.0" spacing="50.0">
@@ -103,7 +103,7 @@
             </Button>
          </children>
       </HBox>
-      <Button layoutX="900.0" layoutY="147.0" mnemonicParsing="false" style="-fx-background-color: #228B22;" text="Adicionar um gol" textFill="WHITE">
+      <Button layoutX="900.0" layoutY="147.0" mnemonicParsing="false" onAction="#setTableGols" style="-fx-background-color: #228B22;" text="Adicionar um gol" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
